# ai-paper-digest

./: auto_git_push.py  commit_file.sh  flask_server.py  index.html  pyproject.toml  quicksort.py  refresh_database.sh  serve.sh
assets/: index.json
assets/Arxiv-CV/: papers.json
assets/Arxiv-CV/2502.11864/: gpt-4o-mini.json
assets/Arxiv-CV/2502.11891/: gpt-4o-mini.json
assets/Arxiv-CV/2502.11974/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12003/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12027/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12080/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12081/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12095/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12138/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12151/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12154/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12181/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12223/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12293/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12297/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12342/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12359/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12418/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12425/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12427/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12449/: gpt-4o-mini.json
assets/Arxiv-CV/2502.12456/: gpt-4o-mini.json
assets/Arxiv-NLP/: papers.json
assets/Arxiv-Sound/: papers.json
static/: styles.css
static/assets/: index.json
templates/: index.html
user_data/: disliked_papers.json  liked_papers.json  paper_lists.json
(+2567 files in other folders)
